add network debugging tools

--- a/dev-nodes/miners/Dockerfile
+++ b/dev-nodes/miners/Dockerfile
@@ -10,7 +10,7 @@ RUN add-apt-repository -y ppa:ethereum/ethereum
 
 ARG binary
 RUN apt-get update \
-     && apt-get install -y ethereum
+     && apt-get install -y ethereum net-tools netcat
 
 ARG password
 ARG privatekey
