--- a/dev-nodes/docker-compose.yml
+++ b/dev-nodes/docker-compose.yml
@@ -2,12 +2,14 @@ version: "3"
 services:
   bootnode:
     hostname: bootnode
+    container_name: bootnode
     environment:
       - nodekeyhex=08f0e1dee5c1b4645f3331a566009e41a4514b6cd28656d63d0449ecf812812b #Needs to be fix, so that the miners know the resulting enode id
     build:
       context: ./bootnode
     ports:
       - 30301:30301/udp
+      - 30303:30303/udp
     networks:
       chainnet:
         ipv4_address: 172.25.0.101 # The miners need to know the IP address later on
@@ -25,7 +27,9 @@ services:
       args:
         privatekey: df504d175ae63abf209bad9dda965310d99559620550e74521a6798a41215f46 # Please don't do something like this in production, okay?
         password: pass
-    container_name: spck-miner-1
+    container_name: miner-1
+    ports:
+      - 8545:8545
     volumes:
       - eth-data-1:/root/.ethash
     networks:
@@ -45,7 +49,9 @@ services:
       args:
         privatekey: bc5b578e0dcb2dbf98dd6e5fe62cb5a28b84a55e15fc112d4ca88e1f62bd7c35
         password: word
-    container_name: spck-miner-2
+    container_name: miner-2
+    ports:
+      - 8546:8545
     volumes:
      - eth-data-2:/root/.ethash
     networks:
@@ -65,9 +71,9 @@ services:
        args:
          privatekey: bc5b578e0dcb2dbf98dd6e5fe62cb5a28b84a55e15fc112d4ca88e1f62bd7c35
          password: word
-     container_name: spck-node
+     container_name: node
      ports:
-       - 8545:8545
+       - 8547:8545
      healthcheck:
        test: wget http://localhost:8545
        interval: 2s
